// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jsx (ssr mode) does not render modifier if prop false 2`] = `
<div>
  <style>
    .element-2313942302 {color: red;}
  </style>
  <div
    class="element-2313942302"
    data-testid="test"
  />
</div>
`;

exports[`jsx (ssr mode) does not render modifier if prop is not provided 2`] = `
<div>
  <style>
    .element-2313942302 {color: red;}
  </style>
  <div
    class="element-2313942302"
    data-testid="test"
  />
</div>
`;

exports[`jsx (ssr mode) does not render modifier if prop undefined 2`] = `
<div>
  <style>
    .element-2313942302 {color: red;}
  </style>
  <div
    class="element-2313942302"
    data-testid="test"
  />
</div>
`;

exports[`jsx (ssr mode) renders element and modifier styles 2`] = `
<div>
  <style>
    .element-2313942302 {color: red;}
.element-2313942302--primary-2561700995 {color: blue;}
  </style>
  <div
    class="element-2313942302 element-2313942302--primary-2561700995"
    data-testid="test"
  />
</div>
`;

exports[`jsx (ssr mode) renders element and modifier styles without id 2`] = `
<div>
  <style>
    .2313942302 {color: red;}
.2313942302--primary-2561700995 {color: blue;}
  </style>
  <div
    class="2313942302 2313942302--primary-2561700995"
    data-testid="test"
  />
</div>
`;

exports[`jsx (ssr mode) renders element styles 2`] = `
<div>
  <style>
    .element-2313942302 {color: red;}
  </style>
  <div
    class="element-2313942302"
    data-testid="test"
  />
</div>
`;

exports[`jsx (ssr mode) renders element styles without id 2`] = `
<div>
  <style>
    .2313942302 {color: red;}
  </style>
  <div
    class="2313942302"
    data-testid="test"
  />
</div>
`;

exports[`jsx (ssr mode) renders multiple globals 2`] = `
<div>
  <style>
    
:root {box-sizing: border-box;}
 body {color: green;}
  </style>
  <div
    class="element-3938"
    data-testid="test"
  />
</div>
`;

exports[`jsx (ssr mode) renders single global 2`] = `
<div>
  <style>
    .element-2313942302 {color: red;}
:root {box-sizing: border-box;}
  </style>
  <div
    class="element-2313942302"
    data-testid="test"
  />
</div>
`;

exports[`jsx (ssr mode) renders themed elements 2`] = `
<div>
  <style>
    .element-1937164027 {color: var(--primary-color);}
.theme-element-4276149098 {--primary-color: red;}
  </style>
  <div
    class="element-1937164027 theme-element-4276149098"
    data-testid="test"
  />
</div>
`;

exports[`jsx (ssr mode) renders themed globals 2`] = `
<div>
  <style>
    .element-2313942302 {color: red;}
:root {color: var(--color);}
.theme-element-2313942302 {--color: red;}
  </style>
  <div
    class="element-2313942302  theme-element-2313942302"
    data-testid="test"
  />
</div>
`;

exports[`jsx (ssr mode) renders themed modifiers 2`] = `
<div>
  <style>
    .element-1937164027 {color: var(--primary-color);}
.theme-element-2013313543 {--primary-color: red;--secondary-color: blue;}
  </style>
  <div
    class="element-1937164027 theme-element-2013313543"
    data-testid="test"
  />
</div>
`;
